manifests/whoami/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 80
  selector:
    app: whoami
