manifests/whoami/whoami-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls-ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: whoami
      port:
        name: https
  tls:
    - hosts:
        - whoami
